解决@Value自定义配置不生效的问题